--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         <a href="portfolio.html">home</a>
         <a href="#mijn.werk">portfolio</a>
         <a href="#mijn.skills"> mijn skills </a>
-        <a href="#contact"> Contact </a>
+        <a href="#contact"> contact </a>
     </nav>
 
     <img src="fotot-van-mijzelf-3.jpg" alt="foto van mijzelf">
@@ -21,7 +21,7 @@
 
     <section id="intro">
         <h1> Hoi, mijn naam is Julian Vroom.</h1>
-        <p>ik ben tweede jaars student Bij de opleiding Communication and Multimedia design. <br> Hier leer ik digitale media te ontwerpen met oog voor de eindgebruiker. Hierdoor <br> kun ik producten, diensten en ook hele organisaties verbeteren. </p>
+        <p>Ik ben tweede jaars student Bij de opleiding Communication and Multimedia design. <br> Hier leer ik digitale media te ontwerpen met oog voor de eindgebruiker. Hierdoor <br> kun ik producten, diensten en ook hele organisaties verbeteren. <br> Ik Kom uit Purmerend en ben nu !9 jaar oud. </p>
     </section>
 
     <a name="mijn.werk">
