--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,8 @@
 
 
     <section id="intro">
-        <h1> Hoi, mijn naam is Julian Vroom.</h1>
-        <p>Ik ben tweede jaars student Bij de opleiding Communication and Multimedia design. <br> Hier leer ik digitale media te ontwerpen met oog voor de eindgebruiker. Hierdoor <br> kun ik producten, diensten en ook hele organisaties verbeteren. <br> Ik Kom uit Purmerend en ben nu !9 jaar oud. </p>
-    </section>
+       <h1> Hoi, mijn naam is Julian Vroom.</h1>
+        <p>Ik kom uit purmerend en ben 19 jaar oud. <br>Ik ben tweede jaars student Bij de opleiding Communication<br> and Multimedia design.  Hier leer ik digitale media te ontwerpen <br> met oog voor de eindgebruiker. Hierdoor kan ik producten, <br>diensten en ook hele organisaties verbeteren. </p>    </section>
 
     <a name="mijn.werk">
         <h1 class="kopje"> MIJN <span>WERK</span></h1>
